force-app/main/default/objects/nFUSE__Creditor__c/nFUSE__Creditor__c.object-meta.xml
<CustomObject>
    <description>Information specific to each Creditor for a given Credit Report</description>
    <label>Creditor</label>
    <nameField>
        <label>Creditor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>