force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Account_Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Account_Activity_Status__c</fullName>
    <description>The system automatically populates this picklist field to indicate if a credit report tradeline account is open or closed. By default, this field is null.</description>
    <inlineHelpText>This field displays the status of a credit report tradeline account.</inlineHelpText>
    <label>Account Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>