force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Account_Number__c</fullName>
    <description>The system populates this optional field to associate the account number with the creditor.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>