force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Account_Type_Code__c</fullName>
    <description>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</description>
    <inlineHelpText>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</inlineHelpText>
    <label>Account Type Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>