force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Balance_Date__c</fullName>
    <label>Balance Date</label>
    <type>Date</type>
</CustomField>