force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Count_30_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Count_30_Days_Past_Due__c</fullName>
    <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</description>
    <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</inlineHelpText>
    <label>Count 30 Days Past Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>