force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Creditor_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Creditor_Industry_Code__c</fullName>
    <description>The system populates this optional text field with the creditor industry code.</description>
    <inlineHelpText>The system populates this optional text field with the creditor industry code.</inlineHelpText>
    <label>Creditor Industry Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>