force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Creditor_Name__c</fullName>
    <description>Entity Name</description>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>