force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Creditor_Number__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Creditor_Number__c</fullName>
    <description>The system populates this optional text field with the credit subscriber&apos;s member code.</description>
    <inlineHelpText>The system populates this optional text field with the credit subscriber&apos;s member code.</inlineHelpText>
    <label>Creditor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>