force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Current_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Current_Status_Code__c</fullName>
    <description>The system populates this optional text field with the current status code, which indicates the current status of the account.</description>
    <inlineHelpText>The system populates this optional text field with the current status code, which indicates the current status of the account.</inlineHelpText>
    <label>Current Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>