force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Liability_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Liability_Type__c</fullName>
    <label>Liability Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>