force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Months_Left_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Months_Left_To_Pay__c</fullName>
    <description>The system automatically populates this field with the number of months left to pay on the debt from information on the applicant&apos;s credit report.</description>
    <inlineHelpText>This field displays the number of months left to pay on the debt.</inlineHelpText>
    <label>Months Left to Pay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>