force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__ReportId__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__ReportId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Credit Report associated with the Creditor</description>
    <label>Credit Report</label>
    <referenceTo>nFUSE__Credit_Report__c</referenceTo>
    <relationshipName>Creditor_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>