force-app/main/default/objects/nFUSE__Creditor__c/fields/nFUSE__Terms_Duration__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Terms_Duration__c</fullName>
    <description>The system populates this optional text field with the term duration of the financial obligation.</description>
    <inlineHelpText>The system populates this optional text field with the term duration of the financial obligation.</inlineHelpText>
    <label>Terms Duration</label>
    <length>32</length>
    <type>Text</type>
</CustomField>